# ChangeLog for sci-chemistry/mgltools-webservices
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Jun 2013; Justin Lecher <jlec@gentoo.org>
  -mgltools-webservices-1.5.4-r2.ebuild, mgltools-webservices-1.5.6.ebuild:
  Drop old

  14 Apr 2013; Justin Lecher <jlec@gentoo.org>
  mgltools-webservices-1.5.4-r2.ebuild, mgltools-webservices-1.5.6.ebuild:
  Correct license

*mgltools-webservices-1.5.6 (14 Apr 2013)

  14 Apr 2013; Justin Lecher <jlec@gentoo.org>
  -mgltools-webservices-1.5.6_rc2.ebuild,
  -mgltools-webservices-1.5.6_rc3.ebuild, +mgltools-webservices-1.5.6.ebuild:
  Version Bump, drop old

*mgltools-webservices-1.5.6_rc3 (27 Jan 2013)

  27 Jan 2013; Justin Lecher <jlec@gentoo.org>
  +mgltools-webservices-1.5.6_rc3.ebuild, metadata.xml:
  Version Bump; move to distutils-r1.eclass

  27 Apr 2012; Justin Lecher <jlec@gentoo.org>
  mgltools-webservices-1.5.4-r2.ebuild, mgltools-webservices-1.5.6_rc2.ebuild:
  Add 2.7-pypy-* to RESTRICT_PYTHON_ABIS

  07 Mar 2012; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Removed maintainer, as herd is enough

*mgltools-webservices-1.5.6_rc2 (06 Jan 2012)

  06 Jan 2012; Justin Lecher <jlec@gentoo.org>
  +mgltools-webservices-1.5.6_rc2.ebuild, metadata.xml:
  Version Bump, #373679

*mgltools-webservices-1.5.4-r2 (29 Jun 2010)

  29 Jun 2010; Justin Lecher <jlec@gentoo.org>
  -mgltools-webservices-1.5.4-r1.ebuild,
  +mgltools-webservices-1.5.4-r2.ebuild:
  Python ABI fixes

*mgltools-webservices-1.5.4-r1 (26 May 2009)

  26 May 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  +mgltools-webservices-1.5.4-r1.ebuild:
  Added new dep on zsi

*mgltools-WebServices-1.5.4 (17 May 2009)

  17 May 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  +mgltools-WebServices-1.5.4.ebuild, +metadata.xml:
  Initial checkin
