@@ -1,6 +1,11 @@
 # ChangeLog for sci-chemistry/mgltools-webservices
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Mar 2015; Justin Lecher <jlec@gentoo.org>
+  mgltools-webservices-1.5.6.ebuild:
+  sci-chemistry/mgltools-webservices: Drop PYTHON_MODNAME and support for
+  python2_6
 
   10 Jun 2013; Justin Lecher <jlec@gentoo.org>
   -mgltools-webservices-1.5.4-r2.ebuild, mgltools-webservices-1.5.6.ebuild:
@@ -54,4 +59,3 @@
   17 May 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
   +mgltools-WebServices-1.5.4.ebuild, +metadata.xml:
   Initial checkin
-
